@@ -1,4 +1,6 @@
 0.4.2
+Fixed seffault when selecting file in browser plugin.
+Minor bug fixes.
 Fixed yet another api breakage in gtk3 ... for fucks sake leave shit alone guys!
 Fixed kkeditmsg-3 trying to open gtk2 version of editor.
 Added SessionID number to status bar.
